@@ -115,6 +115,19 @@
   </to>
 </from>
 
+<from dir="/usr/share/icons/Adwaita/">
+    index.theme
+    16x16/actions/go-down.png
+    16x16/actions/go-up.png
+    16x16/status/image-missing.png
+    scalable/actions/pan-down-symbolic.svg
+    scalable/actions/pan-end-symbolic-rtl.svg
+    scalable/actions/pan-end-symbolic.svg
+    scalable/actions/pan-start-symbolic-rtl.svg
+    scalable/actions/pan-start-symbolic.svg
+    scalable/actions/pan-up-symbolic.svg
+</from>
+
 <from dir="/usr/share/locale">
   <to dir="/usr/share/locale_special">
     <from expand="glob">
