@@ -34,6 +34,7 @@ Version 16.55 - 9 February 2015
 - Update traslations
 - switch from oxygen-gtk to Adwaita theme
   o remove oxygen-gtk
+  o add missing icons (mga#13673, mga#14355, mga#14840, mga#14844)
 
 Version 16.52 - 5 February 2015
 
